--- a/README
+++ b/README
@@ -11,9 +11,9 @@ running the commands:
 
 Create symlinks:
 
-    ln -s ~/dotfiles/bashrc ~/.bashrc
-    ln -s ~/dotfiles/vimrc ~/.vimrc
-    ln -s ~/dotfiles/gvimrc ~/.gvimrc
+    ln -s ~/dotfiles/bash/bashrc ~/.bashrc
+    ln -s ~/dotfiles/vim/vimrc ~/.vimrc
+    ln -s ~/dotfiles/vim/gvimrc ~/.gvimrc
     ln -s ~/dotfiles/vim ~/.vim
 
 I put Vim's backup and swap files in `~/tmp`, so that directory must exist. To
