--- a/README
+++ b/README
@@ -23,7 +23,7 @@ be sure, run:
 
 # VIM #
 
-My preferences for Vim are stored in `dotfiles/vimrc` and `dotfiles/gvimrc`
+My preferences for Vim are stored in `dotfiles/vim/vimrc` and `dotfiles/gvimrc`
 respectively. All plugins and scripts are stored in the `dotfiles/vim`
 directory.
 
