--- a/README
+++ b/README
@@ -21,7 +21,10 @@ I put Vim's backup and swap files in `~/tmp`, so that directory must exist. To
 be sure, run: 
 
     mkdir ~/tmp
-
+    mkdir ~/tmp/.backup
+    mkdir ~/tmp/.swp
+    mkdir ~/tmp/.undo
+      
 # VIM #
 
 My preferences for Vim are stored in `dotfiles/vim/vimrc` and `dotfiles/vim/gvimrc`
@@ -34,16 +37,17 @@ Plugins that are published on github can be installed as submodules. For
 example, to install the [JavaScript bundle][jsbun], follow these steps:
 
     cd ~/dotfiles
-    git submodule add http://github.com/pangloss/vim-javascript.git vim/bundle/vim-javascript
+    git submodule add http://github.com/pangloss/nerdtree.git/
+vim/bundle/nerdtree 
 
 This will update the `.gitmodules` file by appending something like:
 
-    [submodule "vim/bundle/vim-javascript"]
-        path = vim/bundle/vim-javascript
-        url = http://github.com/pangloss/vim-javascript.git
+    [submodule "vim/bundle/nerdtree"]
+        path = vim/bundle/nerdtree
+        url = http://github.com/scrooloose/nerdtree.git
     
 As well as checkout out the git repo into the
-`vim/bundle/vim-javascript` directory. You can then commit these changes
+`vim/bundle/nerdtree` directory. You can then commit these changes
 as follows:
 
     git add .
