--- a/README
+++ b/README
@@ -34,10 +34,10 @@ directory.
 ## Adding Plugin Bundles ##
 
 Plugins that are published on github can be installed as submodules. For
-example, to install the [JavaScript bundle][jsbun], follow these steps:
+example, to install the [Nerdtree bundle][ntree], follow these steps:
 
     cd ~/dotfiles
-    git submodule add http://github.com/pangloss/nerdtree.git/
+    git submodule add http://github.com/scrooloose/nerdtree.git/
 vim/bundle/nerdtree 
 
 This will update the `.gitmodules` file by appending something like:
@@ -51,12 +51,10 @@ As well as checkout out the git repo into the
 as follows:
 
     git add .
-    git commit -m "Added the javascript bundle"
+    git commit -m "Added the nerdtree plug-in 
+    git push origin master
 
 
 
 
-
-[jsbun]: http://github.com/pangloss/vim-javascript.git
-[ap]: http://github.com/michaeldv/awesome_print
-[i_editor]: http://github.com/jberkel/interactive_editor
+[ntree]: http://github.com/scrooloose/nerdtree.git
