--- a/README
+++ b/README
@@ -64,7 +64,8 @@ as follows:
     git commit -m "Added the nerdtree plug-in 
     git push origin master
 
-
+N.B.: On first run of tmux, remember to initialize your tmux plugins. Before 
+starting any sessions, enter <prefix>+<shift>+<I>.
 
 
 [ntree]: http://github.com/scrooloose/nerdtree.git
