--- a/README
+++ b/README
@@ -17,8 +17,7 @@ Create symlinks:
     ln -s ~/dotfiles/vim ~/.vim
     ln -s ~/dotfiles/tmux/tmux.conf ~/.tmux.conf
 
-I put Vim's backup and swap files in `~/tmp`, so that directory must exist. To
-be sure, run: 
+Vim's backup and swap files are stored in `~/tmp`, so that directory must exist.
 
     mkdir ~/tmp
     mkdir ~/tmp/.backup
@@ -27,7 +26,7 @@ be sure, run:
       
 # VIM #
 
-My preferences for Vim are stored in `dotfiles/vim/vimrc` and `dotfiles/vim/gvimrc`
+Preferences for Vim are stored in `dotfiles/vim/vimrc` and `dotfiles/vim/gvimrc`
 respectively. All plugins and scripts are stored in the `dotfiles/vim`
 directory.
 
@@ -56,9 +55,9 @@ This will update the `.gitmodules` file by appending something like:
         path = vim/bundle/nerdtree
         url = http://github.com/scrooloose/nerdtree.git
     
-As well as checkout out the git repo into the
-`vim/bundle/nerdtree` directory. You can then commit these changes
-as follows:
+This will also checkout out the git repo into the `vim/bundle/nerdtree` directory.
+
+Commit these changes as follows: 
 
     git add .
     git commit -m "Added the nerdtree plug-in 
